(#116) Update README.md to include instructions for JavaFX set up in Eclipse